completed logic for rps game

--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <title>Document</title>
   </head>
   <body>
-    <button class="rockBtn">Rock</button>
-    <button class="paperBtn">Paper</button>
-    <button class="sciBtn">Scissors</button>
-    <script src="index.js"></script>
+    <button class="gameBtn">ROCK</button>
+    <button class="gameBtn">PAPER</button>
+    <button class="gameBtn">SCISSORS</button>
+    <div id="humanScore"></div>
+    <div id="computerScore"></div>
+    <div id="result"></div>
   </body>
+  <script src="index.js"></script>
 </html>
